feat: add get last 10 transaction of a credit and debit card
