# src/main/java/com/project1/ms_transaction_service/model/entity/CreditCardTransaction.java
@@ -16,7 +16,7 @@ import java.math.BigDecimal;
 @SuperBuilder(toBuilder = true)
 @TypeAlias("creditCardTransaction")
 public class CreditCardTransaction extends Transaction {
-    private String creditCard;
+    private String creditCardId;
 
     private String customerId;
 
